--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     Watch your favorite games live with no hassle. The best place for cricket, football, and more.
   </p>
 
-  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1K9fM4BNAJgFO2VazaMipT2ZjW9lLhDca">Download APK</a>
+  <a class="download-btn" href="https://www.mediafire.com/file/x2ksju49rrilg2z/base.apk/file">Download APK</a>
 
   <div class="preview">
     <img src="/mnt/data/file-Yag7uSUSLBtSHb2nsTmvVw" alt="App Preview" />
